--- a/EatIdeasApp/View/Base.lproj/Main.storyboard
+++ b/EatIdeasApp/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DFu-sk-YEl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yLg-dV-70m">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -20,29 +20,29 @@
                     </view>
                     <navigationItem key="navigationItem" id="H18-PT-P1h"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="segue" customClass="BottomCardSegue" customModule="EatIdeasApp" customModuleProvider="target" id="gUe-fs-Jxt"/>
+                        <segue destination="MYU-Bs-ibC" kind="show" identifier="segue" customClass="BottomCardSegue" customModule="EatIdeasApp" customModuleProvider="target" id="gUe-fs-Jxt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HdF-Wo-JSB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2797.709923664122" y="50"/>
+            <point key="canvasLocation" x="3724.4274809160302" y="50"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="EatIdeasApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ideas" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kea-aL-zxq">
-                                <rect key="frame" x="175" y="134" width="42" height="20.333333333333343"/>
+                                <rect key="frame" x="175" y="99" width="42" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Kjr-Hh-mQV">
-                                <rect key="frame" x="0.0" y="196.33333333333331" width="393" height="621.66666666666674"/>
+                                <rect key="frame" x="0.0" y="161.33333333333331" width="393" height="621.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="621.66666666666674" id="2wy-gU-rA2"/>
@@ -224,14 +224,14 @@
                     <blurEffect style="regular"/>
                 </visualEffectView>
             </objects>
-            <point key="canvasLocation" x="3840.4580152671756" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="5693.8931297709923" y="3.5211267605633805"/>
         </scene>
         <!--Saved Controller-->
         <scene sceneID="UtK-oS-xXq">
             <objects>
                 <viewController id="rTG-Mm-7Lx" customClass="SavedController" customModule="EatIdeasApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TOd-Id-P87">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="3X2-vd-Kzf">
@@ -268,18 +268,18 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dmW-Ud-EKx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2916.7938931297708" y="741.54929577464793"/>
+            <point key="canvasLocation" x="4767" y="850"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="Gc9-92-nkS">
             <objects>
                 <viewController id="HJ0-e6-ahz" customClass="DetailViewController" customModule="EatIdeasApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="IkZ-xb-pKD">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="1250"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="1181"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I5K-GH-GyV">
-                                <rect key="frame" x="0.0" y="59" width="393" height="1191"/>
+                                <rect key="frame" x="0.0" y="59" width="393" height="1122"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1NV-pC-LmW">
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="1200"/>
@@ -415,25 +415,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kl5-rz-SBE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4929.0076335877857" y="-20.422535211267608"/>
+            <point key="canvasLocation" x="6779.3893129770986" y="-20.422535211267608"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="q7K-8b-uRC">
+        <scene sceneID="hBz-4h-tgh">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DFu-sk-YEl" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MYU-Bs-ibC" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6Fv-r4-HSN">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                    <navigationItem key="navigationItem" id="A2o-tD-lA6"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="q2m-wX-gkv">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="yLg-dV-70m" kind="relationship" relationship="rootViewController" id="fuI-VW-OCu"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="xtJ-wi-kSp"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Epg-9m-ruO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uuH-yZ-w8g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1870.9923664122136" y="50"/>
+            <point key="canvasLocation" x="4767.1755725190842" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
